# ctx

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pkg  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
benchmark/: random.cc
cmake/: pkg.cmake
example/: burn_in.cc  fibonacci.cc  locking.cc  main.cc  parallel_for.cc  quicksort.cc
include/ctx/: access_data.h  access_request.h  access_scheduler.h  access_t.h  call.h  channel.h  concurrent_stack.h  condition_state.h  condition_variable.h  ctx.h  ctx_config.h.in  future.h  op_id.h  op_tracker.h  operation.h  parallel_for.h  res_id_t.h  runner.h  scheduler.h  stack_manager.h  thread_local.h  worker.h
include/ctx/impl/: condition_variable.h  future.h  operation.h  scheduler.h
include/test/: fibonacci.h
src/: condition_variable.cc  ctx.cc  operation.cc  scheduler.cc  stack_manager.cc
